templates/radar-home_template.yaml
---
# Source: radar-home/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-radar-home
  labels:
    helm.sh/chart: radar-home-0.2.2
    app.kubernetes.io/name: radar-home
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.3"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      helm.sh/chart: radar-home-0.2.2
      app.kubernetes.io/name: radar-home
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/version: "0.1.3"
      app.kubernetes.io/managed-by: Helm
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
  policyTypes:
  - Ingress
  - Egress
---
# Source: radar-home/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-radar-home
  labels:
    helm.sh/chart: radar-home-0.2.2
    app.kubernetes.io/name: radar-home
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: radar-home
    app.kubernetes.io/instance: release-name
---
# Source: radar-home/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-radar-home
  labels:
    helm.sh/chart: radar-home-0.2.2
    app.kubernetes.io/name: radar-home
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.3"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radar-home
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radar-home
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        null
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app.kubernetes.io/name"
                    operator: In
                    values:
                    - radar-home
                  - key: "app.kubernetes.io/instance"
                    operator: In
                    values:
                    - release-name
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: radar-home
          securityContext:
            null
          image: "radarbase/radar-home:0.1.3"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 10m
              memory: 5Mi
---
# Source: radar-home/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-radar-home
  labels:
    helm.sh/chart: radar-home-0.2.2
    app.kubernetes.io/name: radar-home
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "localhost"
      secretName: radar-base-tls-radar-home
  rules:
    - host: "localhost"
      http:
        paths:
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-radar-home
                port:
                  number: 8080
---
# Source: radar-home/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-radar-home-test-connection"
  labels:
    helm.sh/chart: radar-home-0.2.2
    app.kubernetes.io/name: radar-home
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.1.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['release-name-radar-home:8080']
  restartPolicy: Never
